# Tesina_de_grado

./: Anteproyecto de tesina - Simón Gazze.Rmd  Desarrollo - Tesina de grado.R  Desarrollo - Tesina de grado.Rmd  Desarrollo teórico.Rmd  Desarrollo---Tesina-de-grado.html  Generación y preprocesamiento de la base de datos.Rmd  Primer modelo.R  README.md  Reunión Cristina 22-05.Rmd  Reunión-Cristina-22-05.html  SIMONREVISARBASEDEDATOS.txt  Tesina de grado - Simon Gazze.Rmd  Tesina de grado - Simón Gazze.Rmd  Tesina-de-grado---Simon-Gazze.tex  Tesina-de-grado---Simón-Gazze.tex  Tesina_de_grado.Rproj  Web_scraping_play_by_play.ipynb  acciones.xlsx  cv_lista.RDS  datos_01.xlsx  freq_sim.RDS  header.tex  match_data.xlsx  modelo_lasso.RDS  modelo_multi_enet.RDS  modelo_multi_lasso.RDS  modelo_multi_ridge.RDS  modelo_ridge.RDS  pbp_crudo.R  plus_minus_por_equipo.RDS  plus_minus_por_equipo_1.RDS  resultados_validacion.RData
Web-scraping/lnb-web-scraping/: README.md  pyproject.toml
Web-scraping/lnb-web-scraping/data/processed/: combined_df.parquet  df_players.parquet
Web-scraping/lnb-web-scraping/data/scrapped/: 0_ATENAS (C) vs BOCA (007_10_2024 22_10).parquet  100_UNION (SF) vs INSTITUTO (005_12_2024 21_00).parquet  101_REGATAS (C) vs ZARATE BASKET (005_12_2024 21_30).parquet  102_ATENAS (C) vs INDEPENDIENTE (O) (006_12_2024 21_00).parquet  103_QUIMSA vs FERRO (007_12_2024 11_30).parquet  (+373 more)
Web-scraping/lnb-web-scraping/notebook/: 01_get_games.ipynb  02_scrapping.ipynb  03_data_processing.ipynb  04_SOM.ipynb  05_K-prototype.ipynb  06_PCA.ipynb  07_Hierarchical.ipynb
(+4 files in other folders)
