[project]
name = "web_scraping"
version = "0.1.0"
description = "A try for scrap the LNB data"
authors = [
    {name = "Landa Roman",email = "landaromants@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "selenium (>=4.34.0,<5.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "selenium-wire (>=5.1.0,<6.0.0)",
    "blinker (==1.7.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "minisom (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "kmodes (>=0.12.2,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
